--- a/DCReader/DCReader.csproj
+++ b/DCReader/DCReader.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.CognitiveServices.Speech" Version="1.43.0" />
     <PackageReference Include="NAudio" Version="2.2.1" />
+    <PackageReference Include="Tesseract" Version="5.2.0" />
     <PackageReference Include="Vosk" Version="0.3.38" />
   </ItemGroup>
 
