make pdf and docx supported

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "dotnet.defaultSolution": "DCReader.sln"
+    "dotnetAcquisitionExtension.existingDotnetPath": [],
+    "omnisharp.useModernNet": false,
 }
