--- a/DCReader/DCReader.csproj
+++ b/DCReader/DCReader.csproj
@@ -11,6 +11,8 @@
     <PackageReference Include="NAudio" Version="2.2.1" />
     <PackageReference Include="Tesseract" Version="5.2.0" />
     <PackageReference Include="Vosk" Version="0.3.38" />
+    <PackageReference Include="PdfPig" Version="0.1.10" />
+    <PackageReference Include="DocumentFormat.OpenXml" Version="3.3.0" />
   </ItemGroup>
 
 </Project>
